--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     
     <!-- JS Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <style>
         body { font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
@@ -68,18 +67,15 @@
                         <div class="bg-gray-800 p-6 rounded-xl shadow-lg"><h3 class="text-gray-400 text-sm font-medium">Tổng số khách hàng</h3><p id="customer-count" class="text-3xl font-bold text-white mt-2">0</p></div>
                         <div class="bg-gray-800 p-6 rounded-xl shadow-lg"><h3 class="text-gray-400 text-sm font-medium">Tổng số thiết bị</h3><p id="total-count" class="text-3xl font-bold text-white mt-2">0</p></div>
                     </div>
-                    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-8">
-                        <div class="lg:col-span-2 bg-gray-800 p-6 rounded-xl shadow-lg"><h2 class="text-xl font-semibold text-white mb-4">Cảnh báo: Đơn hàng quá hạn</h2><div id="overdue-orders-list" class="space-y-4"></div></div>
-                        <div class="lg:col-span-1 bg-gray-800 p-6 rounded-xl shadow-lg"><h2 class="text-xl font-semibold text-white mb-4">Đơn sắp đến hạn trả</h2><div id="upcoming-returns-list" class="space-y-4"></div></div>
-                    </div>
                     <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-                        <div class="lg:col-span-2 bg-gray-800 p-6 rounded-xl shadow-lg"><h2 class="text-xl font-semibold text-white mb-4">Doanh thu 7 ngày qua</h2><canvas id="revenue-chart"></canvas></div>
+                        <div class="lg:col-span-1 bg-gray-800 p-6 rounded-xl shadow-lg"><h2 class="text-xl font-semibold text-white mb-4">Cảnh báo: Đơn hàng quá hạn</h2><div id="overdue-orders-list" class="space-y-4"></div></div>
+                        <div class="lg:col-span-1 bg-gray-800 p-6 rounded-xl shadow-lg"><h2 class="text-xl font-semibold text-white mb-4">Đơn sắp đến hạn trả</h2><div id="upcoming-returns-list" class="space-y-4"></div></div>
                         <div class="lg:col-span-1 bg-gray-800 p-6 rounded-xl shadow-lg"><h2 class="text-xl font-semibold text-white mb-4">Hoạt động gần đây</h2><div id="recent-activity-list" class="space-y-3"></div></div>
                     </div>
                 </div>
                 <div id="equipment-page" class="page-content hidden"><div class="flex flex-col sm:flex-row justify-between sm:items-center mb-6 gap-4"><h1 class="text-3xl font-bold text-white">Quản lý Thiết bị</h1><button id="add-equipment-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center sm:w-auto w-full"><svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>Thêm thiết bị</button></div><div class="bg-gray-800 rounded-xl shadow-lg overflow-x-auto"><table class="w-full text-left min-w-[720px]"><thead class="bg-gray-700"><tr><th class="p-4 font-semibold">Tên thiết bị</th><th class="p-4 font-semibold">S/N</th><th class="p-4 font-semibold">Loại</th><th class="p-4 font-semibold">Trạng thái</th><th class="p-4 font-semibold text-right">Giá thuê/ngày</th><th class="p-4 font-semibold text-center">Hành động</th></tr></thead><tbody id="equipment-table-body"></tbody></table></div></div>
                 <div id="customers-page" class="page-content hidden"><div class="flex flex-col sm:flex-row justify-between sm:items-center mb-6 gap-4"><h1 class="text-3xl font-bold text-white">Quản lý Khách hàng</h1><button id="add-customer-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center sm:w-auto w-full"><svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>Thêm khách hàng</button></div><div class="bg-gray-800 rounded-xl shadow-lg overflow-x-auto"><table class="w-full text-left min-w-[720px]"><thead class="bg-gray-700"><tr><th class="p-4 font-semibold">Họ và tên</th><th class="p-4 font-semibold">Số điện thoại</th><th class="p-4 font-semibold">Email</th><th class="p-4 font-semibold">Số CCCD</th><th class="p-4 font-semibold text-center">Hành động</th></tr></thead><tbody id="customer-table-body"></tbody></table></div></div>
-                <div id="rentals-page" class="page-content hidden"><div class="flex flex-col sm:flex-row justify-between sm:items-center mb-6 gap-4"><h1 class="text-3xl font-bold text-white">Quản lý Đơn thuê</h1><button id="add-rental-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center sm:w-auto w-full"><svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>Tạo đơn thuê</button></div><div class="bg-gray-800 rounded-xl shadow-lg overflow-x-auto"><table class="w-full text-left min-w-[720px]"><thead class="bg-gray-700"><tr><th class="p-4 font-semibold">Mã Đơn</th><th class="p-4 font-semibold">Khách hàng</th><th class="p-4 font-semibold">Ngày thuê</th><th class="p-4 font-semibold">Ngày trả</th><th class="p-4 font-semibold">Trạng thái</th><th class="p-4 font-semibold text-right">Tổng tiền</th><th class="p-4 font-semibold text-center">Hành động</th></tr></thead><tbody id="rental-table-body"></tbody></table></div></div>
+                <div id="rentals-page" class="page-content hidden"><div class="flex flex-col sm:flex-row justify-between sm:items-center mb-6 gap-4"><h1 class="text-3xl font-bold text-white">Quản lý Đơn thuê</h1><button id="add-rental-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center sm:w-auto w-full"><svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>Tạo đơn thuê</button></div><div class="bg-gray-800 rounded-xl shadow-lg overflow-x-auto"><table class="w-full text-left min-w-[720px]"><thead class="bg-gray-700"><tr><th class="p-4 font-semibold">Khách hàng</th><th class="p-4 font-semibold">Ngày thuê</th><th class="p-4 font-semibold">Ngày trả</th><th class="p-4 font-semibold">Trạng thái</th><th class="p-4 font-semibold text-right">Tổng tiền</th><th class="p-4 font-semibold text-center">Hành động</th></tr></thead><tbody id="rental-table-body"></tbody></table></div></div>
             </main>
         </div><div id="sidebar-overlay" class="fixed inset-0 bg-black opacity-50 z-30 hidden md:hidden"></div>
     </div></div>
@@ -141,7 +137,6 @@
         // Dashboard
         const revenueTodayEl = document.getElementById('revenue-today'), revenueWeekEl = document.getElementById('revenue-week'), revenueMonthEl = document.getElementById('revenue-month'), overdueCountEl = document.getElementById('overdue-count');
         const overdueOrdersList = document.getElementById('overdue-orders-list'), upcomingReturnsList = document.getElementById('upcoming-returns-list');
-        const revenueChartCanvas = document.getElementById('revenue-chart');
         const recentActivityList = document.getElementById('recent-activity-list');
         const availableCountEl = document.getElementById('available-count'), rentedCountEl = document.getElementById('rented-count'), customerCountEl = document.getElementById('customer-count'), totalCountEl = document.getElementById('total-count');
 
@@ -179,7 +174,6 @@
         let itemToDeleteId = null, itemToDeleteType = '';
         let rentalState = { customer: null, items: [], startDate: null, endDate: null, totalCost: 0, days: 0 };
         let datePickerStart, datePickerEnd;
-        let revenueChart = null;
 
         // --- UI / View Management ---
         function updateUI(state) {
@@ -229,8 +223,7 @@
             Object.keys(listeners).forEach(key => { if (listeners[key]) { listeners[key](); listeners[key] = null; } });
 
             // Listener for Rentals (for revenue, overdue, upcoming)
-            const rentalsQuery = query(collection(db, 'rentals'));
-            listeners.dashboardRentals = onSnapshot(rentalsQuery, (snapshot) => {
+            listeners.dashboardRentals = onSnapshot(query(collection(db, 'rentals')), (snapshot) => {
                 const now = new Date();
                 const startOfToday = new Date(); startOfToday.setHours(0, 0, 0, 0);
                 const endOfTomorrow = new Date(); endOfTomorrow.setDate(now.getDate() + 1); endOfTomorrow.setHours(23, 59, 59, 999);
@@ -239,13 +232,6 @@
 
                 let revenueToday = 0, revenueWeek = 0, revenueMonth = 0;
                 const overdueOrders = [], upcomingReturns = [];
-                const last7DaysRevenue = Array(7).fill(0);
-                const dayLabels = [];
-
-                for (let i = 6; i >= 0; i--) {
-                    const d = new Date(); d.setDate(d.getDate() - i);
-                    dayLabels.push(d.toLocaleDateString('vi-VN', { weekday: 'short' }));
-                }
 
                 snapshot.docs.forEach(doc => {
                     const rental = doc.data(); rental.id = doc.id;
@@ -254,8 +240,6 @@
                         if (returnedDate >= startOfToday) revenueToday += rental.totalCost;
                         if (returnedDate >= startOfWeek) revenueWeek += rental.totalCost;
                         if (returnedDate >= startOfMonth) revenueMonth += rental.totalCost;
-                        const diffDays = Math.floor((now - returnedDate) / (1000 * 60 * 60 * 24));
-                        if (diffDays < 7) { last7DaysRevenue[6 - diffDays] += rental.totalCost; }
                     }
                     if (rental.status === 'Đang thuê') {
                         const endDate = rental.endDate.toDate();
@@ -270,7 +254,6 @@
                 overdueCountEl.textContent = overdueOrders.length;
                 renderOverdueOrders(overdueOrders);
                 renderUpcomingReturns(upcomingReturns.sort((a,b) => a.endDate.toDate() - b.endDate.toDate()));
-                renderRevenueChart(dayLabels, last7DaysRevenue);
             });
 
             // Listener for Equipment Stats
@@ -312,16 +295,6 @@
             if (activities.length === 0) { recentActivityList.innerHTML = `<p class="text-gray-400">Chưa có hoạt động nào.</p>`; return; }
             recentActivityList.innerHTML = activities.map(actDoc => { const activity = actDoc.data(); return `<div class="border-l-2 border-blue-500 pl-3"><p class="text-sm text-gray-200">${activity.text}</p><p class="text-xs text-gray-500">${formatDate(activity.timestamp, true)}</p></div>`; }).join('');
         }
-
-        function renderRevenueChart(labels, data) {
-            if (revenueChart) { revenueChart.destroy(); }
-            revenueChart = new Chart(revenueChartCanvas, {
-                type: 'bar',
-                data: { labels: labels, datasets: [{ label: 'Doanh thu', data: data, backgroundColor: 'rgba(59, 130, 246, 0.5)', borderColor: 'rgba(59, 130, 246, 1)', borderWidth: 1 }] },
-                options: { responsive: true, maintainAspectRatio: false, scales: { y: { beginAtZero: true, ticks: { color: '#9ca3af' }, grid: { color: 'rgba(255, 255, 255, 0.1)' } }, x: { ticks: { color: '#9ca3af' }, grid: { display: false } } }, plugins: { legend: { display: false } } }
-            });
-        }
-
 
         // --- Equipment Management ---
         function renderEquipmentTable(docs) {
@@ -374,7 +347,7 @@
         // --- RENTAL MANAGEMENT ---
         function renderRentalTable(docs) {
             rentalTableBody.innerHTML = '';
-            if (docs.length === 0) { rentalTableBody.innerHTML = `<tr><td colspan="7" class="text-center p-8 text-gray-400">Chưa có đơn thuê nào.</td></tr>`; return; }
+            if (docs.length === 0) { rentalTableBody.innerHTML = `<tr><td colspan="6" class="text-center p-8 text-gray-400">Chưa có đơn thuê nào.</td></tr>`; return; }
             docs.forEach(doc => {
                 const rental = doc.data();
                 const statusClass = getStatusClass(rental.status, 'rental');
@@ -386,7 +359,6 @@
                     actions = `<button class="rental-action-btn bg-green-600/80 hover:bg-green-600 text-white text-xs font-bold py-1 px-2 rounded" data-id="${doc.id}" data-action="return">Nhận lại</button>`;
                 }
                 const row = `<tr class="border-b border-gray-700 hover:bg-gray-700/50">
-                    <td class="p-4 text-gray-400 text-xs">${doc.id.substring(0,8)}...</td>
                     <td class="p-4 font-medium">${rental.customer.name}</td>
                     <td class="p-4 text-gray-400">${formatDate(rental.startDate)}</td>
                     <td class="p-4 text-gray-400">${formatDate(rental.endDate)}</td>
