--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div id="customer-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-lg p-8 transform transition-all scale-95" id="customer-modal-content"><div class="flex justify-between items-center mb-6"><h2 id="customer-modal-title" class="text-2xl font-bold text-white"></h2><button id="close-customer-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><form id="customer-form"><div class="grid grid-cols-1 md:grid-cols-2 gap-4"><div><label for="cus-name" class="block text-gray-300 mb-2">Họ và tên</label><input type="text" id="cus-name" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600" required></div><div><label for="cus-phone" class="block text-gray-300 mb-2">Số điện thoại</label><input type="tel" id="cus-phone" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600" required></div><div><label for="cus-email" class="block text-gray-300 mb-2">Email</label><input type="email" id="cus-email" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600"></div><div><label for="cus-idcard" class="block text-gray-300 mb-2">Số CCCD/CMND</label><input type="text" id="cus-idcard" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600"></div></div><p id="customer-form-error" class="text-red-400 text-sm mt-4 text-center"></p><div class="mt-8 flex justify-end"><button type="button" id="cancel-customer-modal-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-6 rounded-lg mr-4">Hủy</button><button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-lg">Lưu</button></div></form></div></div>
     <div id="confirm-delete-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-md p-8 transform transition-all scale-95"><h3 class="text-xl font-bold text-white mb-4">Xác nhận xóa</h3><p class="text-gray-400 mb-6">Bạn có chắc chắn muốn xóa <strong id="item-to-delete-name" class="font-bold text-amber-400"></strong>? Hành động này không thể hoàn tác.</p><div class="flex justify-end gap-4"><button id="cancel-delete-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-6 rounded-lg">Hủy</button><button id="confirm-delete-btn" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-lg">Xóa</button></div></div></div>
     <div id="rental-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-4xl p-8 transform transition-all scale-95 flex flex-col h-[90vh]"><div class="flex justify-between items-center mb-6 flex-shrink-0"><h2 class="text-2xl font-bold text-white">Tạo đơn thuê mới</h2><button id="close-rental-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><div class="flex-grow overflow-y-auto pr-2"><form id="rental-form"><div class="mb-6"><h3 class="text-lg font-semibold text-blue-400 border-b border-gray-700 pb-2 mb-4">1. Thông tin khách hàng</h3><div class="relative"><label for="customer-search" class="block text-gray-300 mb-2">Tìm khách hàng (theo tên hoặc SĐT)</label><input type="text" id="customer-search" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600" autocomplete="off"><div id="customer-search-results" class="absolute w-full bg-gray-600 rounded-md mt-1 z-10 max-h-48 overflow-y-auto hidden"></div></div><div id="selected-customer-info" class="mt-4 p-4 bg-gray-700/50 rounded-lg hidden"></div></div><div class="mb-6"><h3 class="text-lg font-semibold text-blue-400 border-b border-gray-700 pb-2 mb-4">2. Thêm thiết bị</h3><label for="equipment-search" class="block text-gray-300 mb-2">Nhập Serial Number và nhấn Thêm</label><div class="flex gap-2"><input type="text" id="equipment-search" class="flex-grow p-3 bg-gray-700 rounded-md border border-gray-600" autocomplete="off"><button type="button" id="add-equipment-to-cart-btn" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg">Thêm</button></div><p id="equipment-search-error" class="text-red-400 text-sm mt-1"></p><div id="rental-cart" class="mt-4 space-y-2"></div></div><div class="mb-6"><h3 class="text-lg font-semibold text-blue-400 border-b border-gray-700 pb-2 mb-4">3. Thời gian & Chi phí</h3><div class="grid grid-cols-1 md:grid-cols-2 gap-4"><div><label for="start-date" class="block text-gray-300 mb-2">Ngày thuê</label><input type="text" id="start-date" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600 cursor-pointer" readonly></div><div><label for="end-date" class="block text-gray-300 mb-2">Ngày trả</label><input type="text" id="end-date" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600 cursor-pointer" readonly></div></div><div id="rental-summary" class="mt-4 p-4 bg-gray-700/50 rounded-lg hidden"><div class="flex justify-between items-center"><span class="text-gray-400">Tổng số ngày thuê:</span><span id="rental-days" class="font-semibold text-white">0 ngày</span></div><div class="flex justify-between items-center mt-2"><span class="text-gray-400 text-xl">Tổng chi phí:</span><span id="rental-total-cost" class="font-bold text-2xl text-green-400">0 VNĐ</span></div></div></div></form></div><div class="mt-8 flex justify-end flex-shrink-0"><button type="button" id="cancel-rental-modal-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-3 px-6 rounded-lg mr-4">Hủy</button><button type="submit" id="save-rental-btn" form="rental-form" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg disabled:bg-gray-500 disabled:cursor-not-allowed" disabled>Lưu đơn thuê</button></div></div></div>
-    <div id="confirm-return-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-2xl p-8 transform transition-all scale-95"><div class="flex justify-between items-center mb-6"><h2 class="text-2xl font-bold text-white">Xác nhận trả hàng</h2><button id="close-return-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><form id="return-form"><div id="return-info" class="space-y-4"></div><div class="mt-6 border-t border-gray-700 pt-6 space-y-4"><h3 class="text-lg font-semibold text-blue-400">Điều chỉnh chi phí (nếu có)</h3><div><label for="adjustment-amount" class="block text-gray-300 mb-2">Giảm giá (-)/ Phụ thu (+)</label><input type="number" id="adjustment-amount" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600" placeholder="VD: -50000 hoặc 100000"></div><div><label for="adjustment-notes" class="block text-gray-300 mb-2">Ghi chú điều chỉnh</label><textarea id="adjustment-notes" rows="2" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600"></textarea></div><div class="p-4 bg-gray-900 rounded-lg"><label for="final-cost" class="block text-green-400 mb-2 font-semibold">TỔNG THU CUỐI CÙNG (VNĐ)</label><input type="number" id="final-cost" class="w-full p-3 bg-gray-700 text-2xl font-bold text-green-300 rounded-md border border-gray-600"></div></div><div class="mt-8 flex justify-end"><button type="button" id="cancel-return-modal-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-3 px-6 rounded-lg mr-4">Hủy</button><button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg">Xác nhận & Hoàn tất</button></div></form></div></div>
+    <div id="confirm-return-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-2xl p-8 transform transition-all scale-95"><div class="flex justify-between items-center mb-6"><h2 class="text-2xl font-bold text-white">Xác nhận trả hàng</h2><button id="close-return-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><form id="return-form"><div id="return-info" class="space-y-4"></div><div class="mt-6 border-t border-gray-700 pt-6 space-y-4"><h3 class="text-lg font-semibold text-blue-400">Điều chỉnh chi phí (nếu có)</h3><div><label for="adjustment-amount" class="block text-gray-300 mb-2">Giảm giá (-)/ Phụ thu (+)</label><input type="number" id="adjustment-amount" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600" placeholder="VD: -50000 hoặc 100000"></div><div><label for="adjustment-notes" class="block text-gray-300 mb-2">Ghi chú điều chỉnh</label><textarea id="adjustment-notes" rows="2" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600"></textarea></div><div class="p-4 bg-gray-900 rounded-lg"><label for="final-cost" class="block text-green-400 mb-2 font-semibold">TỔNG THU CUỐI CÙNG (VNĐ)</label><input type="number" id="final-cost" class="w-full p-3 bg-gray-700 text-2xl font-bold text-green-300 rounded-md border border-gray-600"></div></div><p id="return-form-error" class="text-red-400 text-sm mt-4 text-center"></p><div class="mt-8 flex justify-end"><button type="button" id="cancel-return-modal-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-3 px-6 rounded-lg mr-4">Hủy</button><button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg">Xác nhận & Hoàn tất</button></div></form></div></div>
     <div id="details-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-lg p-8 transform transition-all scale-95"><div class="flex justify-between items-center mb-6"><h2 id="details-modal-title" class="text-2xl font-bold text-white"></h2><button id="close-details-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><div id="details-modal-content" class="space-y-3 text-gray-300"></div></div></div>
 
     <!-- Firebase SDK -->
@@ -168,6 +168,7 @@
         const adjustmentAmountInput = document.getElementById('adjustment-amount');
         const adjustmentNotesInput = document.getElementById('adjustment-notes');
         const finalCostInput = document.getElementById('final-cost');
+        const returnFormError = document.getElementById('return-form-error');
 
         // --- App State ---
         let listeners = { equipment: null, customer: null, rental: null, dashboardRentals: null, dashboardActivity: null, dashboardEquipment: null, dashboardCustomers: null };
@@ -238,7 +239,8 @@
                     const rental = doc.data(); rental.id = doc.id;
                     if (rental.status === 'Đã trả' && rental.returnedDate) {
                         const returnedDate = rental.returnedDate.toDate();
-                        const cost = rental.actualCost !== undefined ? rental.actualCost : rental.totalCost;
+                        const costValue = rental.actualCost !== undefined ? rental.actualCost : rental.totalCost;
+                        const cost = !isNaN(parseFloat(costValue)) ? parseFloat(costValue) : 0;
                         if (returnedDate >= startOfToday) revenueToday += cost;
                         if (returnedDate >= startOfWeek) revenueWeek += cost;
                         if (returnedDate >= startOfMonth) revenueMonth += cost;
@@ -528,6 +530,7 @@
         function openReturnModal(rentalData) {
             activeReturnData = rentalData;
             returnForm.reset();
+            returnFormError.textContent = '';
             
             const startDate = rentalData.startDate.toDate();
             const actualReturnDate = new Date();
@@ -572,6 +575,12 @@
         returnForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             if (!activeReturnData) return;
+            returnFormError.textContent = '';
+            const finalCostValue = parseFloat(finalCostInput.value);
+            if (isNaN(finalCostValue)) {
+                returnFormError.textContent = 'Tổng thu cuối cùng không hợp lệ.';
+                return;
+            }
 
             const batch = writeBatch(db);
             const rentalRef = doc(db, 'rentals', activeReturnData.id);
@@ -579,7 +588,7 @@
             batch.update(rentalRef, {
                 status: 'Đã trả',
                 returnedDate: serverTimestamp(),
-                actualCost: parseFloat(finalCostInput.value),
+                actualCost: finalCostValue,
                 adjustmentAmount: parseFloat(adjustmentAmountInput.value) || 0,
                 adjustmentNotes: adjustmentNotesInput.value.trim()
             });
@@ -590,7 +599,7 @@
             });
 
             await batch.commit();
-            logActivity(`Đã nhận lại đơn từ ${activeReturnData.customer.name} với tổng thu ${formatCurrency(finalCostInput.value)}`);
+            logActivity(`Đã nhận lại đơn từ ${activeReturnData.customer.name} với tổng thu ${formatCurrency(finalCostValue)}`);
             closeReturnModal();
         });
 
@@ -684,6 +693,7 @@
             detailsModal.classList.add('hidden');
             detailsModal.classList.remove('flex');
         });
+        detailsModal.addEventListener('click', (e) => { if(e.target === detailsModal) { detailsModal.classList.add('hidden'); detailsModal.classList.remove('flex'); } });
 
         // --- Auth & Mobile UI Event Listeners ---
         document.getElementById('login-form').addEventListener('submit', (e) => { e.preventDefault(); signInWithEmailAndPassword(auth, loginForm['login-email'].value, loginForm['login-password'].value).catch(err => loginErrorEl.textContent = 'Email hoặc mật khẩu không đúng.'); });
